--- a/example/texmf/complex/Makefile
+++ b/example/texmf/complex/Makefile
@@ -1,7 +1,7 @@
-### TestMetapostTeX.mk -- Metapost figure using TeX labels
+### Makefile -- Complex document using LaTeX
 
 # Author: Michael Grünewald
-# Date: Wed Dec  3 07:56:22 CET 2014
+# Date: Sun Nov 23 22:53:22 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,14 +14,14 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-DOCUMENT=		texlabel.mp
-MPDEVICE=		eps
+PAKCAGE=		complex
+VERSION=		1.0
+OFFICER=		michipili@gmail.com
 
-test:
-	test -f ${DESTDIR}${DOCDIR}/texlabel-1.eps
+SUBDIR=			chapter1
+SUBDIR+=		chapter2
+SUBDIR+=		main
 
-.PATH:			${BSDOWLSRCDIR}/example/texmf/metapost
+.include "generic.project.mk"
 
-.include "mpost.doc.mk"
-
-### End of file `TestMetapostTeX.mk'
+### End of file `Makefile'
