--- a/example/texmf/index/Makefile
+++ b/example/texmf/index/Makefile
@@ -1,7 +1,7 @@
-### TestMetapostTeX.mk -- Metapost figure using TeX labels
+### Makefile -- Test index support
 
 # Author: Michael Grünewald
-# Date: Wed Dec  3 07:56:22 CET 2014
+# Date: Thu Nov 27 12:27:35 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,14 +14,9 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-DOCUMENT=		texlabel.mp
-MPDEVICE=		eps
+DOCUMENT=		galley.tex
+USES+=			index
 
-test:
-	test -f ${DESTDIR}${DOCDIR}/texlabel-1.eps
+.include "latex.doc.mk"
 
-.PATH:			${BSDOWLSRCDIR}/example/texmf/metapost
-
-.include "mpost.doc.mk"
-
-### End of file `TestMetapostTeX.mk'
+### End of file `Makefile'
