--- a/example/texmf/metapost/Makefile
+++ b/example/texmf/metapost/Makefile
@@ -1,7 +1,7 @@
-### TestMetapostTeX.mk -- Metapost figure using TeX labels
+### Makefile  -- Figures using Metapost
 
 # Author: Michael Grünewald
-# Date: Wed Dec  3 07:56:22 CET 2014
+# Date: Sun Nov 23 19:18:11 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,14 +14,9 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-DOCUMENT=		texlabel.mp
-MPDEVICE=		eps
-
-test:
-	test -f ${DESTDIR}${DOCDIR}/texlabel-1.eps
-
-.PATH:			${BSDOWLSRCDIR}/example/texmf/metapost
+DOCUMENT=		square.mp
+MPDEVICE=		eps pdf png svg
 
 .include "mpost.doc.mk"
 
-### End of file `TestMetapostTeX.mk'
+### End of file `Makefile'
