--- a/example/ocaml/heat/fibonacci/Makefile
+++ b/example/ocaml/heat/fibonacci/Makefile
@@ -1,7 +1,7 @@
-### TestPack.mk -- Produce a packed library
+### Makefile -- Newton's method
 
 # Author: Michael Grünewald
-# Date: Sat Nov 29 08:06:59 CET 2014
+# Date: Sat Oct  5 20:40:24 CEST 2013
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,18 +14,11 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-PACK=			minibasic
+LIBRARY=		fibonacci
+SRCS+=			fibonacci.ml
 
-SRCS=			basic_types.ml
-SRCS+=			basic_parser.mly
-SRCS+=			basic_lexer.mll
+EXTERNAL=		ocaml.findlib:nums
 
-.PATH:			${BSDOWLSRCDIR}/example/ocaml/minibasic
+.include "ocaml.lib.mk"
 
-test:
-	test -f ${DESTDIR}${LIBDIR}/minibasic.cma
-	test -f ${DESTDIR}${LIBDIR}/minibasic.cmi
-
-.include "ocaml.pack.mk"
-
-### End of file `TestPack.mk'
+### End of file `Makefile'
