Support optional testsuites
The settings requiring optional tests in the configuration script
used to be ignored by the testsuite.

--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -40,6 +40,14 @@ SHAREDIR?=		${_BPS_DATADIR}${PACKAGEDIR}
 OCAMLVERSION?=		@OCAMLVERSION@
 BSDMAKE?=		@BSDMAKE@
 
+WITH_TESTSUITE_FINDLIB?=	@WITH_TESTSUITE_FINDLIB@
+WITH_TESTSUITE_PY_SETUPTOOLS?=	@WITH_TESTSUITE_PY_SETUPTOOLS@
+WITH_TESTSUITE_MINGW32?=	@WITH_TESTSUITE_MINGW32@
+WITH_TESTSUITE_NOWEB?=		@WITH_TESTSUITE_NOWEB@
+WITH_TESTSUITE_GPG?=		@WITH_TESTSUITE_GPG@
+WITH_TESTSUITE_TEXMF?=		@WITH_TESTSUITE_TEXMF@
+WITH_TESTSUITE_METAPOST?=	@WITH_TESTSUITE_METAPOST@
+
 # Local Variables:
 # mode: makefile
 # End:
