Port preparation of a static website to the new BSD Owl

--- a/example/www/Makefile
+++ b/example/www/Makefile
@@ -1,20 +1,39 @@
-SUBDIR = index
-SUBDIR+= tex
-SUBDIR+= ocaml
-SUBDIR+= writing
-SUBDIR+= generation
-SUBDIR+= guidelines
-SUBDIR+= style
+### Makefile -- A simple static website
 
-WWWBASE?= ${.CURDIR}/wwwobj
-CLEANDIRS+= ${WWWBASE}
+# BSD Owl Scripts (https://github.com/michipili/bsdowl)
+# This file is part of BSD Owl Scripts
+#
+# Copyright © 2002–2016 Michael Grünewald
+#
+# This file must be used under the terms of the CeCILL-B.
+# This source file is licensed as described in the file COPYING, which
+# you should have received as part of this distribution. The terms
+# are also available at
+# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-WWWMAIN = main.sgml
+PACKAGE=	static
+VERSION=	0.0.1-current
+OFFICER?=	michipili@gmail.com
 
-.MAKEFLAGS: WWWMAIN="${WWWMAIN}"
+MODULE=		scroll:index
+MODULE+=	scroll:tex
+MODULE+=	scroll:ocaml
+MODULE+=	scroll:writing
+MODULE+=	scroll:generation
+MODULE+=	scroll:guidelines
+MODULE+=	scroll:style
 
-do-publish:
-	${MAKE} "PREFIX=${HOME}" "WWWBASE=${WWWBASE}" all install
+#
+# Prepare a local copy to browse
+#
 
-.include "bps.project.mk"
-.include "www.sgml.mk"
+USE_SWITCH_CREDENTIALS=	no
+WWWROOTDIR?=		${.CURDIR}/_build
+CLEANDIRS+=		${WWWROOTDIR}
+
+.export WWWROOTDIR
+.export USE_SWITCH_CREDENTIALS
+
+.include "generic.project.mk"
+
+### End of file `Makefile'
