Detect OpenSP at configuration time

--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -45,6 +45,7 @@ WITH_TESTSUITE_PY_SETUPTOOLS?=	@WITH_TESTSUITE_PY_SETUPTOOLS@
 WITH_TESTSUITE_MINGW32?=	@WITH_TESTSUITE_MINGW32@
 WITH_TESTSUITE_NOWEB?=		@WITH_TESTSUITE_NOWEB@
 WITH_TESTSUITE_GPG?=		@WITH_TESTSUITE_GPG@
+WITH_TESTSUITE_OPENSP?=		@WITH_TESTSUITE_OPENSP@
 WITH_TESTSUITE_TEXMF?=		@WITH_TESTSUITE_TEXMF@
 WITH_TESTSUITE_METAPOST?=	@WITH_TESTSUITE_METAPOST@
 
