--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ addons:
     - noweb
     - ocaml
     - opam
+    - opensp
+    - sgml-data
     - sqlite3
     - texlive-font-utils
     - texlive-fonts-recommended
@@ -22,6 +24,7 @@ addons:
     - texlive-latex-extra
     - texlive-latex-recommended
     - texlive-metapost
+    - tidy
 install: sh -ex ./Library/Ancillary/autoinstall bmake opam
 script: sh -ex ./Library/Ancillary/travisci
 env:
