--- a/configure.ac
+++ b/configure.ac
@@ -236,6 +236,7 @@ AC_SUBST([WITH_TESTSUITE_PY_SETUPTOOLS])
 AC_SUBST([WITH_TESTSUITE_MINGW32])
 AC_SUBST([WITH_TESTSUITE_NOWEB])
 AC_SUBST([WITH_TESTSUITE_GPG])
+AC_SUBST([WITH_TESTSUITE_SGMLNORM])
 AC_SUBST([WITH_TESTSUITE_TEXMF])
 AC_SUBST([WITH_TESTSUITE_METAPOST])
 AC_SUBST([MINGW32CC])
@@ -256,6 +257,7 @@ Optional Features:
   --enable-test-mingw32=${WITH_TESTSUITE_MINGW32}
   --enable-test-noweb=${WITH_TESTSUITE_NOWEB}
   --enable-test-gpg=${WITH_TESTSUITE_GPG}
+  --enable-test-opensp=${WITH_TESTSUITE_SGMLNORM}
   --enable-test-texmf=${WITH_TESTSUITE_TEXMF}
   --enable-test-metapost=${WITH_TESTSUITE_METAPOST}
 
