Support developement of elisp macros
Closes #159.

--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -38,6 +38,7 @@ SHAREDIR?=		${_BPS_DATADIR}${PACKAGEDIR}
 OCAMLVERSION?=		@OCAMLVERSION@
 BSDMAKE?=		@BSDMAKE@
 
+WITH_TESTSUITE_EMACS?=		@WITH_TESTSUITE_EMACS@
 WITH_TESTSUITE_FINDLIB?=	@WITH_TESTSUITE_FINDLIB@
 WITH_TESTSUITE_PY_SETUPTOOLS?=	@WITH_TESTSUITE_PY_SETUPTOOLS@
 WITH_TESTSUITE_MINGW32?=	@WITH_TESTSUITE_MINGW32@
