--- a/bps/bps.bpsconfig.mk.in
+++ b/bps/bps.bpsconfig.mk.in
@@ -187,6 +187,7 @@ _BPS_AWK?=		@AWK@
 _BPS_GREP?=		@GREP@
 _BPS_SED?=		@SED@
 _BPS_ID?=		@ID@
+_BPS_EMACS?=		@EMACS@
 _BPS_SYSTEMOWN?=	@SYSTEMOWN@
 _BPS_SYSTEMGRP?=	@SYSTEMGRP@
 _BPS_COMPRESS?=		@COMPRESS@
