Test against newest versions of OCaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,10 @@ script: sh -ex ./Library/Ancillary/travisci
 env:
   - TRAVIS_OCAML_VERSION=4.02.3 TRAVIS_FULL=no
   - TRAVIS_OCAML_VERSION=4.02.3 TRAVIS_FULL=yes
+  - TRAVIS_OCAML_VERSION=4.03.0 TRAVIS_FULL=no
+  - TRAVIS_OCAML_VERSION=4.03.0 TRAVIS_FULL=yes
+  - TRAVIS_OCAML_VERSION=4.04.0 TRAVIS_FULL=no
+  - TRAVIS_OCAML_VERSION=4.04.0 TRAVIS_FULL=yes
 cache:
   directories:
   - ${HOME}/.local
